[metadata]
name = wunsen
version = 0.0.3
author = cakimpei
author_email = cakimpei@gmail.com
description = Transliterate/transcribe from other languages into Thai
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cakimpei/wunsen
project_urls =
    Bug Tracker = https://github.com/cakimpei/wunsen/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    khanaa

[options.packages.find]
where = src